--- a/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "colored-input",
+   "execution_count": 6,
+   "id": "lined-sydney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "consistent-mobile",
+   "id": "turned-kenya",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "utility-henry",
+   "id": "falling-gazette",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "varying-florence",
+   "id": "proof-evaluation",
    "metadata": {},
    "source": [
     "## 8 Coin 3 Category (MG, EG, Others)\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "floating-journey",
+   "id": "outstanding-checkout",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consecutive-proportion",
+   "id": "helpful-cologne",
    "metadata": {},
    "source": [
     "###  5 Features by slide 9 features "
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "urban-engagement",
+   "id": "attractive-principle",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "artistic-glance",
+   "id": "ordered-immigration",
    "metadata": {},
    "source": [
     "###  4 Features by slide 9 features "
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "tracked-comparison",
+   "id": "major-shore",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operational-second",
+   "id": "casual-cleanup",
    "metadata": {},
    "source": [
     "###  5 Features by redo gasf"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "saved-frederick",
+   "id": "proprietary-hotel",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranking-classification",
+   "id": "balanced-seeker",
    "metadata": {},
    "source": [
     "###  4 Features by redo gasf"
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "stone-environment",
+   "id": "olympic-university",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confidential-doctrine",
+   "id": "agricultural-package",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (MG, MB) 9 Features"
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "academic-evaluation",
+   "id": "small-subject",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-mainstream",
+   "id": "biblical-diesel",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (EG, EB) 9 Features"
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "optical-suggestion",
+   "id": "million-advertising",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlled-rochester",
+   "id": "reasonable-highlight",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (MG, MB) 5 Features"
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "decimal-brass",
+   "id": "moral-encyclopedia",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "physical-romantic",
+   "id": "consistent-synthetic",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (EG, EB) 5 Features"
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "interracial-korean",
+   "id": "collect-carnival",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-literacy",
+   "id": "promotional-specific",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (MG, MB) 4 Features"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "continuous-ballet",
+   "id": "novel-sequence",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaging-senegal",
+   "id": "regulated-traveler",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (EG, EB) 4 Features"
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "correct-ticket",
+   "id": "characteristic-collar",
    "metadata": {},
    "outputs": [
     {
@@ -679,9 +679,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "mysterious-panel",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 3 Category(M (600 MG, 600 MB), E(600 EG, 600 EB), N) 9 features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "contrary-seattle",
+   "metadata": {},
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    mg = a[0:1,600:,:,:,:]\n",
+    "    mb = a[1:2,600:,:,:,:]\n",
+    "    m = np.concatenate((mg,mb), axis=1)\n",
+    "\n",
+    "    eg = a[2:3,600:,:,:,:]\n",
+    "    eb = a[3:4,600:,:,:,:]\n",
+    "    e = np.concatenate((eg,eb), axis=1)\n",
+    "    n = a[4:5,:,:,:,:]\n",
+    "    \n",
+    "    comb = np.concatenate((m,e,n))\n",
+    "    print(comb.shape)\n",
+    "\n",
+    "with open('gasf_arr_8COINMEN9F_USD', mode='wb') as f:\n",
+    "    pickle.dump(comb,f)\n",
+    "   \n",
+    "f.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "above-garden",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 3 Category(M (600 MG, 600 MB), E(600 EG, 600 EB), N) 5 features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "other-duplicate",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COINMEN9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:,:,:,:,:5]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINMEN5F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "infinite-minimum",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 3 Category(M (600 MG, 600 MB), E(600 EG, 600 EB), N) 4 features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "arctic-register",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COINMEN9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:,:,:,:,:4]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINMEN4F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-rochester",
+   "id": "simple-compromise",
    "metadata": {},
    "outputs": [],
    "source": []
