Binary MGB EGB 9-4f training

--- a/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "lined-sydney",
+   "execution_count": 2,
+   "id": "constant-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "turned-kenya",
+   "id": "smaller-leave",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "falling-gazette",
+   "id": "exciting-biology",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proof-evaluation",
+   "id": "western-springfield",
    "metadata": {},
    "source": [
     "## 8 Coin 3 Category (MG, EG, Others)\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "outstanding-checkout",
+   "id": "daily-appraisal",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "helpful-cologne",
+   "id": "limited-toyota",
    "metadata": {},
    "source": [
     "###  5 Features by slide 9 features "
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "attractive-principle",
+   "id": "pressed-jamaica",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-immigration",
+   "id": "chemical-moment",
    "metadata": {},
    "source": [
     "###  4 Features by slide 9 features "
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "major-shore",
+   "id": "legal-understanding",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "casual-cleanup",
+   "id": "thermal-humor",
    "metadata": {},
    "source": [
     "###  5 Features by redo gasf"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "proprietary-hotel",
+   "id": "multiple-bride",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "balanced-seeker",
+   "id": "premier-angola",
    "metadata": {},
    "source": [
     "###  4 Features by redo gasf"
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "olympic-university",
+   "id": "million-drawing",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agricultural-package",
+   "id": "under-translator",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (MG, MB) 9 Features"
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "small-subject",
+   "id": "adaptive-phone",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "biblical-diesel",
+   "id": "processed-stations",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (EG, EB) 9 Features"
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "million-advertising",
+   "id": "diverse-empty",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reasonable-highlight",
+   "id": "limiting-devil",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (MG, MB) 5 Features"
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "moral-encyclopedia",
+   "id": "respiratory-fisher",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-synthetic",
+   "id": "disturbed-garden",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (EG, EB) 5 Features"
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "collect-carnival",
+   "id": "binary-policy",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-specific",
+   "id": "southwest-twelve",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (MG, MB) 4 Features"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "novel-sequence",
+   "id": "certified-semester",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulated-traveler",
+   "id": "optical-visibility",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (MG, MB) 9-4 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "technological-owner",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:2,:,:,:,4:]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINMGB9-4F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "periodic-spice",
    "metadata": {},
    "source": [
     "## 8 Coin 2 Category (EG, EB) 4 Features"
@@ -645,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "characteristic-collar",
+   "id": "satisfactory-nation",
    "metadata": {},
    "outputs": [
     {
@@ -680,16 +724,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-panel",
+   "id": "suburban-inventory",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (EG, EB) 9-4 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "positive-pizza",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[2:4,:,:,:,4:]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINEGB9-4F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "surprised-initial",
    "metadata": {},
    "source": [
     "## 8 Coin 3 Category(M (600 MG, 600 MB), E(600 EG, 600 EB), N) 9 features"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "contrary-seattle",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "short-buying",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
     "    a = pickle.load(f)\n",
@@ -713,7 +803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "above-garden",
+   "id": "overhead-travel",
    "metadata": {},
    "source": [
     "## 8 Coin 3 Category(M (600 MG, 600 MB), E(600 EG, 600 EB), N) 5 features"
@@ -722,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "other-duplicate",
+   "id": "realistic-democracy",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-minimum",
+   "id": "alpha-farmer",
    "metadata": {},
    "source": [
     "## 8 Coin 3 Category(M (600 MG, 600 MB), E(600 EG, 600 EB), N) 4 features\n"
@@ -766,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "arctic-register",
+   "id": "overall-webcam",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "simple-compromise",
+   "id": "peaceful-forward",
    "metadata": {},
    "outputs": [],
    "source": []
