--- a/CryptoPatternDetection/GAF-CNN-v1/Playground.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-v1/Playground.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ordered-drama",
+   "id": "metropolitan-tyler",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entitled-bahamas",
+   "id": "encouraging-pitch",
    "metadata": {},
    "source": [
     "## Keras Load Model"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "automotive-tanzania",
+   "id": "dietary-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "prepared-chick",
+   "id": "third-tension",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "extended-amsterdam",
+   "id": "square-direction",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "authentic-toner",
+   "id": "organic-exhibit",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "opening-metro",
+   "id": "straight-liechtenstein",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "aquatic-climb",
+   "id": "entire-guest",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "extensive-baking",
+   "id": "distinct-monday",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "frequent-article",
+   "id": "vanilla-realtor",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-front",
+   "id": "right-point",
    "metadata": {},
    "source": [
     "## datatime"
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "fresh-mason",
+   "id": "beginning-sentence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "associate-annual",
+   "id": "mysterious-privacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "faced-industry",
+   "id": "intelligent-placement",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "lightweight-thesis",
+   "id": "magnetic-development",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "swiss-august",
+   "id": "architectural-subscriber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "inclusive-projector",
+   "id": "wanted-breeding",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "sustained-mortality",
+   "id": "derived-gravity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "advance-personal",
+   "id": "furnished-treaty",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "scenic-macedonia",
+   "id": "fallen-migration",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "needed-dietary",
+   "id": "purple-association",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggregate-jerusalem",
+   "id": "quiet-shade",
    "metadata": {},
    "source": [
     "## Prediction csv read"
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "moved-glucose",
+   "id": "instant-faith",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "anticipated-ladder",
+   "id": "concrete-drilling",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "indirect-hudson",
+   "id": "basic-tunnel",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "middle-sender",
+   "id": "looking-peeing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "assisted-bandwidth",
+   "id": "exact-space",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ancient-confusion",
+   "id": "center-trace",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "solved-imaging",
+   "id": "infectious-compression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "entertaining-december",
+   "id": "danish-welding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "behind-elder",
+   "id": "bacterial-aaron",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "virgin-spine",
+   "id": "sharp-trigger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "consolidated-warrior",
+   "id": "distinct-trinity",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "sunset-sheriff",
+   "id": "vital-mercury",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "congressional-shuttle",
+   "id": "legislative-backing",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "fantastic-vocabulary",
+   "id": "brave-exhibition",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "matched-harmony",
+   "id": "critical-correlation",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "narrow-middle",
+   "id": "connected-inspiration",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "heard-indonesian",
+   "id": "wireless-encyclopedia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "geological-jefferson",
+   "id": "underlying-musical",
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "sudden-terrain",
+   "id": "ranking-entity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "rough-growing",
+   "id": "dress-major",
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "subjective-democrat",
+   "id": "amazing-group",
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "compound-peripheral",
+   "id": "aging-winner",
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "quality-voltage",
+   "id": "satisfied-transition",
    "metadata": {},
    "outputs": [
     {
@@ -2376,7 +2376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "productive-builder",
+   "id": "ahead-uruguay",
    "metadata": {},
    "source": [
     "## Display "
@@ -2385,7 +2385,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "recreational-diary",
+   "id": "false-wesley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2399,7 +2399,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "closing-brisbane",
+   "id": "multiple-brook",
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "square-plaza",
+   "id": "checked-wayne",
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2676,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "organic-commissioner",
+   "id": "drawn-float",
    "metadata": {},
    "outputs": [
     {
@@ -2708,7 +2708,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "defined-functionality",
+   "id": "headed-manchester",
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "mexican-montreal",
+   "id": "simplified-kruger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2739,7 +2739,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "infrared-soldier",
+   "id": "robust-lighting",
    "metadata": {},
    "outputs": [
     {
@@ -2760,7 +2760,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "foreign-nebraska",
+   "id": "closed-macintosh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2770,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "yellow-chrome",
+   "id": "organizational-progressive",
    "metadata": {},
    "outputs": [
     {
@@ -2802,7 +2802,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "brief-industry",
+   "id": "functioning-editor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2812,7 +2812,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "sticky-expression",
+   "id": "applicable-virtue",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3108,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "inner-education",
+   "id": "tamil-dinner",
    "metadata": {},
    "outputs": [
     {
@@ -3135,7 +3135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "labeled-sewing",
+   "id": "afraid-arbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3149,7 +3149,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "together-salmon",
+   "id": "central-picking",
    "metadata": {},
    "outputs": [
     {
@@ -3169,7 +3169,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "consolidated-cooler",
+   "id": "adopted-cinema",
    "metadata": {},
    "outputs": [
     {
@@ -3190,7 +3190,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "expensive-tracker",
+   "id": "intensive-chosen",
    "metadata": {},
    "outputs": [
     {
@@ -3225,7 +3225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-maintenance",
+   "id": "animated-cinema",
    "metadata": {},
    "source": [
     "##  Join news "
@@ -3234,7 +3234,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "naked-reservation",
+   "id": "superior-facing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3244,7 +3244,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "international-insert",
+   "id": "fourth-establishment",
    "metadata": {},
    "outputs": [
     {
@@ -3367,7 +3367,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "average-highlight",
+   "id": "representative-vocabulary",
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3390,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "banner-concern",
+   "id": "sustained-emphasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3400,7 +3400,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "electric-absence",
+   "id": "centered-reconstruction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3410,7 +3410,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "stone-interpretation",
+   "id": "directed-scenario",
    "metadata": {},
    "outputs": [
     {
@@ -3431,7 +3431,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "whole-liberty",
+   "id": "criminal-conjunction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3441,7 +3441,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "metric-insertion",
+   "id": "desperate-conversation",
    "metadata": {},
    "outputs": [
     {
@@ -3462,7 +3462,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "boring-check",
+   "id": "confused-romania",
    "metadata": {},
    "outputs": [
     {
@@ -3492,7 +3492,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "incorporated-haiti",
+   "id": "running-infrastructure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3502,7 +3502,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "entertaining-search",
+   "id": "studied-party",
    "metadata": {},
    "outputs": [
     {
@@ -3529,7 +3529,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fourth-listing",
+   "id": "spare-determination",
    "metadata": {},
    "outputs": [
     {
@@ -3555,7 +3555,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "hawaiian-royal",
+   "id": "italic-gabriel",
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3671,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "boring-works",
+   "id": "dramatic-jamaica",
    "metadata": {},
    "outputs": [
     {
@@ -3862,7 +3862,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "demonstrated-gateway",
+   "id": "efficient-divide",
    "metadata": {},
    "outputs": [
     {
@@ -3883,7 +3883,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "downtown-kentucky",
+   "id": "suited-bench",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3893,7 +3893,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "coral-suffering",
+   "id": "little-prince",
    "metadata": {},
    "outputs": [
     {
@@ -4095,7 +4095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-conservation",
+   "id": "honey-walter",
    "metadata": {},
    "source": [
     "## Confusion Matrix Display"
@@ -4104,7 +4104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sacred-franklin",
+   "id": "pursuant-pierre",
    "metadata": {},
    "outputs": [
     {
@@ -4231,7 +4231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fresh-bangkok",
+   "id": "embedded-nurse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4256,7 +4256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "after-orientation",
+   "id": "accurate-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4295,9 +4295,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cloudy-louisville",
+   "metadata": {},
+   "source": [
+    "## Candlestick Display"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "vocational-cement",
+   "id": "wrong-precipitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4311,70 +4319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "brazilian-extreme",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('./temp/ETH_USD_result.csv')\n",
-    "ohlc = data.loc[:, ['time', 'open', 'high', 'low', 'close']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "entire-probe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 25 entries, 0 to 24\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column  Non-Null Count  Dtype         \n",
-      "---  ------  --------------  -----         \n",
-      " 0   time    25 non-null     object        \n",
-      " 1   open    25 non-null     float64       \n",
-      " 2   high    25 non-null     float64       \n",
-      " 3   low     25 non-null     float64       \n",
-      " 4   close   25 non-null     float64       \n",
-      " 5   Date    25 non-null     datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), float64(4), object(1)\n",
-      "memory usage: 1.3+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "ohlc.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "variable-dylan",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['time', 'open', 'high', 'low', 'close'], dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ohlc.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 114,
-   "id": "falling-watson",
+   "id": "incredible-income",
    "metadata": {},
    "outputs": [
     {
@@ -4437,7 +4383,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "interim-antenna",
+   "id": "comfortable-advisory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4447,7 +4393,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "threatened-pendant",
+   "id": "great-responsibility",
    "metadata": {},
    "outputs": [
     {
@@ -4492,7 +4438,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "alternate-magic",
+   "id": "noble-poster",
    "metadata": {},
    "outputs": [
     {
@@ -4550,7 +4496,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "opening-bracket",
+   "id": "virgin-association",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4564,7 +4510,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "announced-education",
+   "id": "executed-torture",
    "metadata": {},
    "outputs": [
     {
@@ -4611,7 +4557,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "painful-description",
+   "id": "pending-blind",
    "metadata": {},
    "outputs": [
     {
@@ -4632,7 +4578,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "logical-trance",
+   "id": "stretch-chile",
    "metadata": {},
    "outputs": [
     {
@@ -4653,7 +4599,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "trained-search",
+   "id": "engaging-vocabulary",
    "metadata": {},
    "outputs": [
     {
@@ -4674,7 +4620,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "eight-asset",
+   "id": "allied-pacific",
    "metadata": {},
    "outputs": [
     {
@@ -4744,7 +4690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-galaxy",
+   "id": "figured-smith",
    "metadata": {},
    "outputs": [],
    "source": []
